deployment/overlays/staging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: golem-century-staging
  namespace: staging
spec:
  hostnames:
  - game.anhtran.dev
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    namespace: default
    sectionName: https
  rules:
  - backendRefs:
    - name: golem-century-staging
      port: 8080
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /api
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /apps/golem-staging/api
  - backendRefs:
    - name: golem-century-staging
      port: 8080
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /ws
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /apps/golem-staging/ws
  - backendRefs:
    - name: golem-nginx-staging
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /apps/golem-staging
